# pseutils

./: .gitignore  Cargo.toml  Readme.md  justfile
.github/workflows/: docs.yaml  tests.yaml
docs/: .gitignore  _quarto.yml  examples.qmd  index.qmd
examples/: example.pse  example_molecule_only.pse
resources/: index.html
src/: lib.rs  main.rs  psedata.rs  pymol_structs.rs
src/molviewspec/: OA_01.rs  OA_02.rs  OA_03.rs  builder.rs  mod.rs  nodes.rs  open_API_01.json  open_API_02.json  open_API_04.json  open_api.rs  openapi_v1_mvs_schema.json  utils.rs
src/molviewspec/bak/: OA_04.rs  nodes_bak.rs  open_API_03.json  open_api.rs  prompt.md
src/pymolparsing/: colors.rs  mod.rs  parsing.rs  psedata.rs  representation.rs
tests/: test_molview_spec.rs  test_pse_parsing.rs  tests.rs  tests_open_api.rs
tests/data/: example_molecule_only.json
