[package]
name = "pseutils"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pickle = "1.1"
serde_bytes = "0.11.15"
chrono = "0.4.38"
validator = { version = "0.18", features = ["derive"] }
pdbtbx = "0.11.0"
itertools = "0.13.0"
urlencoding = "2.1.3"
serde_repr = "0.1.19"
once_cell = "1.19.0"
